"Refactor: Rename Classes and convert existing main classes into kotlin"

--- a/QR Scanner/app/src/main/AndroidManifest.xml
+++ b/QR Scanner/app/src/main/AndroidManifest.xml
@@ -151,7 +151,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.DashboardActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
